Stopped flickering and kept fade in animations on standard feedback =

--- a/sass/question-patch.scss
+++ b/sass/question-patch.scss
@@ -1,4 +1,4 @@
-.h5p-question-feedback {
+.h5p-question-feedback.modalled-feedback-parent {
     &.h5p-question-visible {
         transition: none;
     }
@@ -12,6 +12,7 @@
     top: 0;
     width: 100%;
     z-index: 10;
+    
     
     &.modaled-feedback-drag {
         bottom: 25px;
